--- a/index.html
+++ b/index.html
@@ -4,10 +4,22 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title></title>
-	<link rel="stylesheet" href="assets/stylesheets/index.scss">
+	<link rel="stylesheet" href="assets/stylesheets/index.css">
+	<link rel="stylesheet" href="assets/stylesheets/slick.css">
 </head>
 <body>
 	<h1>Hello Simaria2018</h1>
+	<div id="web-carousel">
+		<div></div>
+		<div></div>
+		<div></div>
+	</div>
+	<div id="mobile-carousel">
+		<div></div>
+		<div></div>
+		<div></div>
+	</div>
 	<script src="assets/javascripts/index.js" type="text/javascript" charset="utf-8" async defer></script>
+	<script src="assets/javascripts/slick.min.js" type="text/javascript" charset="utf-8" async defer></script>
 </body>
 </html>
