--- a/index.html
+++ b/index.html
@@ -10,16 +10,17 @@
 <body>
 	<h1>Hello Simaria2018</h1>
 	<div id="web-carousel">
-		<div></div>
-		<div></div>
-		<div></div>
+		<div>a</div>
+		<div>b</div>
+		<div>c</div>
 	</div>
 	<div id="mobile-carousel">
 		<div></div>
 		<div></div>
 		<div></div>
 	</div>
-	<script src="assets/javascripts/index.js" type="text/javascript" charset="utf-8" async defer></script>
-	<script src="assets/javascripts/slick.min.js" type="text/javascript" charset="utf-8" async defer></script>
+	<script src="assets/javascripts/jquery-3.1.1.min.js" type="text/javascript"></script>
+	<script src="assets/javascripts/index.js" type="text/javascript"></script>
+	<script src="assets/javascripts/slick.min.js" type="text/javascript"></script>
 </body>
 </html>
