--- a/index.html
+++ b/index.html
@@ -25,10 +25,12 @@
 	</div>
 
 	<div class="footer">
-		<prev class="prev my-slick-arrow">&lt;</prev>
+		<prev class="prev my-slick-arrow m">&lt;</prev>
+		<prev class="prev my-slick-arrow w">&lt;</prev>
 		<span class="first">Toll Free Number: 1800 1200 600</span>
 		<span>Website Under Construction</span>
-		<next class="next my-slick-arrow">&gt;</next>
+		<next class="next my-slick-arrow m">&gt;</next>
+		<next class="next my-slick-arrow w">&gt;</next>
 	</div>
 	
 	<div id="carouselBannerMaster"></div>
