--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title></title>
+	<title>Simaria 2018 - Website Under Construction</title>
 	<link rel="stylesheet" href="./assets/css/index.css" />
 	<link rel="stylesheet" href="./assets/css/slick.css" />
 </head>
