--- a/index.html
+++ b/index.html
@@ -14,12 +14,20 @@
 		<div id="web-carousel" class="carousel">
 			<div class="page h" number="1"></div>
 			<div class="page h" number="2"></div>
-			<div class="page h" number="3"></div>
+			<div class="page h valign-wrapper" number="3">
+				<div class="video-wrapper">
+					<iframe src="https://www.youtube.com/embed/AaxesUCffoM" frameborder="0" allowfullscreen></iframe>
+				</div>
+			</div>
 		</div>
 		<div id="mobile-carousel" class="carousel">
 			<div class="page v" number="1"></div>
 			<div class="page v" number="2"></div>
-			<div class="page v" number="3"></div>
+			<div class="page v valign-wrapper" number="3">
+				<div class="video-wrapper">
+					<iframe src="https://www.youtube.com/embed/AaxesUCffoM" frameborder="0" allowfullscreen></iframe>
+				</div>
+			</div>
 		</div>
 
 	</div>
